--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="/assets/logo.png" alt="Logo panaderia">
     {{{ body }}}
 </body>
 </html>
