--- a/src/views/partials/navigation.handlebars
+++ b/src/views/partials/navigation.handlebars
@@ -21,10 +21,10 @@
         </nav>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a href="/login" class="nav-link">Login</a>
+                <a href="/users/login" class="nav-link">Login</a>
             </li>
             <li class="nav-item">
-                <a href="/register" class="nav-link">Register</a>
+                <a href="/users/register" class="nav-link">Register</a>
             </li>
         </ul>
     </div>
