--- a/src/views/users/register.handlebars
+++ b/src/views/users/register.handlebars
@@ -7,7 +7,7 @@
             <div class="card-body">
                 <form action="/users/register" method="POST">
                     <div class="form-group">
-                        <input type="text" class="form-control" name="name" placeholder="Name">
+                        <input type="text" class="form-control" name="first_name" placeholder="First Name">
                     </div>
                     <div class="form-group">
                         <input type="text" class="form-control" name="last_name" placeholder="Last Name">
