--- a/src/views/partials/navigation.handlebars
+++ b/src/views/partials/navigation.handlebars
@@ -15,6 +15,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/carts">Carrito</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/users/profile">Perfil</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -25,6 +28,9 @@
             </li>
             <li class="nav-item">
                 <a href="/users/register" class="nav-link">Register</a>
+            </li>
+            <li class="nav-item">
+                <a href="/users/logout" class="nav-link">Log out</a>
             </li>
         </ul>
     </div>
