--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,5 +1,5 @@
 <div class="jumbotron mt-4">
-    <h1 class="display-4"> App ecommers MongoDB</h1>
+    <h1 class="display-4"> Tienda Random en MongoDB</h1>
     <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, cupiditate?</p>
     <hr class="my-4">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, labore?</p>
