--- a/src/views/users/login.handlebars
+++ b/src/views/users/login.handlebars
@@ -12,7 +12,7 @@
                     <div class="form-group">
                         <input type="password" class="form-control" name="password" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn btn-primary btn-blcok">
+                    <button type="submit" class="btn btn-primary btn-block">
                         Signin
                     </button>
                 </form>
