--- a/src/views/users/register.handlebars
+++ b/src/views/users/register.handlebars
@@ -24,7 +24,7 @@
                     <div class="form-group">
                         <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password">
                     </div>
-                    <button type="submit" class="btn btn-primary btn-blcok">
+                    <button type="submit" class="btn btn-primary btn-block">
                         Signup
                     </button>
                 </form>
