--- a/public/views/partials/footer.ejs
+++ b/public/views/partials/footer.ejs
@@ -1,7 +1,7 @@
   <% if (showFooter === true) { %>
 
     <footer class="bg-dark py-3">
-      <p class="text-white text-center mb-0">&copy; Copyrigth Tiendita 2022 - Desarrollado por <span class="text-danger">Luca Pandolfelli</span></p>
+      <p class="text-white text-center mb-0">&copy; Copyrigth Tiendita 2022 - Rellenar con <span class="text-danger">Algo</span></p>
     </footer>
 
   <% } %>
